# study-alexandria

./: .gitignore  README.md  general.json  par.json  pyproject.toml  sysml2xml.ipynb  sysml2xml.py  sysmlcalibrator.xml
slides/: 2024_10_22_sysml_mvp1.pptx  2025_01_17_sysml_mvp2.pptx  2025_04_30_sysml_mvp3.pptx
src/: action.py  base.py  calibrator.py  cartesian.py  device.py  dragonfly.py  eln.py  encoder.py  ft.py  general.py  inertial.py  main.py  mais.py  mc_service.py  mec.py  motorControl.py  par.json  part.py  pc104.py  phase.py  realsense.py  remapper.py  skin.py  skinSpec.py  utils.py  wrapper.py  xcub_all.py
src/generator/: file_generator.py
src/loader/: config_loader.py
sysml/: AtomicComponents.sysml  action.sysml  calibrator.sysml  calibrator.xml  cartesian.sysml  device.sysml  device.sysml-bak  dragonfly.sysml  eln.sysml  eln.xml  encoder.sysml  encoder.sysml-bak  extra.sysml  face-calib.xml  face-eb22-j0-mc.xml  face-eb22-j0-mec.xml  ft.sysml  head-eb20-j0_1-eln.xml  head-eb21-j2_5-mc_service.xml  head.sysml  iCubErzelli03.sysml  iCubGenova11.sysml  inertial.sysml  left_arm.sysml  mais.sysml  mec.sysml  mec.xml  motorControl-service.xml  motorControl.sysml  partsTree.sysml  pc104.sysml  pc104.xml  phase.sysml  phase.xml  realsense.sysml  remapper.sysml  right_arm.sysml  service.sysml  skin.sysml  skinSpec.sysml  (+3 more)
sysmlv2parser/: CustomVisitor.py  SysMLv2.g4  SysMLv2.interp  SysMLv2.tokens  SysMLv2Lexer.interp  SysMLv2Lexer.py  SysMLv2Lexer.tokens  SysMLv2Listener.py  SysMLv2Parser.py  SysMLv2Visitor.py  setup.py  test.py
xml/: calibrator.xml
(+41 files in other folders)
